# dynamic_routing_ephys

./: .gitignore  Makefile  README.md  pyproject.toml
analysis/: DR_analysis_utils.py  Templeton_metadata.ipynb  analyze_LFP.ipynb  analyze_RF_mapping.ipynb  analyze_sound_pilot.ipynb  area_boundary_metrics.ipynb  behavior_summary_pilot_DR_mice.ipynb  decode_irrelevant_stimuli_multi_session.ipynb  decode_stimuli_multi_session.ipynb  decode_stimuli_multi_session_areas.ipynb  decoding_DR.ipynb  decoding_DR_save_each_session.ipynb  decoding_DR_single_session.ipynb  decoding_stimuli.ipynb  decoding_stimuli_templeton.ipynb  plot_DR_data_demo.ipynb  plot_unit_data.ipynb  plot_unit_summary.ipynb  plot_unit_summary_across_sessions.ipynb  plotting_script.py  rewarded_vs_unrewarded.ipynb  single_unit_analysis.ipynb  trial_unit_counts_DR_pilot.ipynb  trial_unit_counts_templeton_pilot.ipynb
processing/: DR_processing_script.py  DR_processing_utils.py  __main__.py  probeSync.py  process_LFP.ipynb  test_main.py  test_processing.py
processing/tests/: test_main.py
tests/: test_main.py
