[tool.poetry]
name = "dynamic_routing_ephys"
version = "0.1.0"
description = ""
authors = ["Chris Mochizuki <chrism@alleninstitute.org>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
pandas = "^2.0.2"
h5py = "^3.8.0"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
